infoserve.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 3569,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.78,
  "homepage_snapshot_redirected_domain": "infoserve.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060411072103id_/http://www.infoserve.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060411072103id_/http%3A//infoserve.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "infoserve.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615002754id_/http%3A//www.infoserve.com/privacy_policy.html",
  "policy_title": "Targeted Local Marketing Solutions - Infoserve - Privacy Policy",
  "policy_url": "infoserve.com/privacy_policy.html",
  "sha1": "70e7bce96ff169f411a3421657a065430cc661f3",
  "simhash": 16557635044637382025,
  "simhash_updated": false,
  "site_hostname": "infoserve.com",
  "site_url": "http://infoserve.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615002754",
  "word_count": 580,
  "year": 2006
}

--- a/i/in/inf/infoserve.com.html
+++ b/i/in/inf/infoserve.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the infoserve.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230224753id_/http%3A//www.infoserve.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the infoserve.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615002754id_/http%3A//www.infoserve.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="Description" content="Infoserve Description">
@@ -29,7 +29,7 @@
           </tr>
           <tr>
             <td colspan="2" class="td8"><table border="0" cellspacing="0" cellpadding="0">
-                <form action="/cgi-bin/newsearch.cgi" name="form1" method="post"></form><tbody><tr>
+                <form action="http://banana.infoserve.com/infoserveWebsite2/servlet/SearchServlet" name="form1" method="get"></form><tbody><tr>
                   <td width="148" class="td14">Business Type </td>
                   <td width="148" class="td14">Location</td>
                   <td width="71">&nbsp;</td>
