--- a/p/pr/pro/promotionworld.com.html
+++ b/p/pr/pro/promotionworld.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the promotionworld.com privacy policy that was archived on 2005-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051213230944id_/http%3A//www.devstart.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the promotionworld.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615003153id_/http%3A//www.devstart.com/privacy.html) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>DevStart.com - The Web Developers Resource Center | Privacy Policy</title>
@@ -28,11 +28,11 @@ function MM_preloadImages() { //v3.0
     <td class="header"><table width="100%" border="0" cellspacing="0" cellpadding="0">
       <tbody><tr>
         <td rowspan="2"><a href="/index.html"><img src="/images/logo.gif" width="209" height="98" border="0"></a></td>
-        <td width="200"><a href="/index.html">Home</a> | <a href="/sitemap.html">Sitemap</a> | <a href="/editorial/policies.html">Terms of use</a></td>
+        <td width="250"><a href="/index.html">Home</a> | <a href="/sitemap.html">Sitemap</a> | <a href="/editorial/editorial_network.html">Network</a> | <a href="/editorial/policies.html">Terms of use</a></td>
       </tr>
 <form name="search" action="/results.php" method="GET"></form>
       <tr>
-        <td width="180"><input type="text" name="q" class="search" value="Search" onfocus="this.value=''" onblur="if(!this.value){this.value='Search';}">&nbsp;<input type="image" src="/images/btn_search.gif" align="top"></td>
+        <td width="180" style="padding-left:80px;"><input type="text" name="q" class="search" value="Search" onfocus="this.value=''" onblur="if(!this.value){this.value='Search';}">&nbsp;<input type="image" src="/images/btn_search.gif" align="top"></td>
       </tr>
       <input type="hidden" name="key" value="oHDMLqZQFHKLlQxSqbpKmpENwKQsXdZ1">
       <input type="hidden" name="site" value="www.devstart.com">
@@ -90,10 +90,16 @@ function MM_preloadImages() { //v3.0
   </tr>
   <tr>
     <td>
-<div id="copyright">© 2005 DevStart Inc. All Rights Reserved.</div>
+<div id="copyright">© 2006 DevStart Inc. All Rights Reserved.</div>
     </td>
   </tr>
 </tbody></table>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">  
+</script> 
+<script type="text/javascript"> 
+_uacct = "UA-232499-6"; 
+urchinTracker(); 
+</script>
 
 
 </body></html>
