--- a/f/fu/fun/funtrivia.com.html
+++ b/f/fu/fun/funtrivia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the funtrivia.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219192115id_/http%3A//funtrivia.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the funtrivia.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615003157id_/http%3A//www.funtrivia.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head></head><body bgcolor="#FFFFFF">
 <center>
