--- a/d/do/dom/domaindirect.com.html
+++ b/d/do/dom/domaindirect.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the domaindirect.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228110310id_/https%3A//www.domaindirect.com/policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the domaindirect.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615003331id_/https%3A//www.domaindirect.com/policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Domain Name Registration and Web Hosting from Domain Direct</title>
@@ -11,7 +11,7 @@
 <!--domain, domain name registration, hosting, web hosting, domain hosting, website hosting-->
 <meta name="keywords" content="domain, domains, domain name, web hosting, hosting, domain names, register domain names, domain name registration, domain registration, domain registrar, domain parking, park domain, domain forwarding, URL forwarding, dns, dns hosting, zone file, zone file editing, website hosting, domain hosting, affordable hosting, low cost hosting, URL registration, internet name, internet address, register .com .net .org .biz .info .ca .us">
 <meta name="description" content="Domain Name Registration and Web Hosting from Domain Direct. The Easiest way to Register, Build &amp; Host your Website!">
-<meta name="copyright" content="Copyright © 2005 Tucows (Delaware) Inc. All rights reserved.">
+<meta name="copyright" content="Copyright © 2006 Tucows.com Co. All rights reserved.">
 <meta name="MSSmartTagsPreventParsing" content="TRUE">
 <meta name="robots" content="index,follow">
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -132,14 +132,14 @@
 <br>
 <b> Registration Service Provider:</b><br>
     Domain Direct<br>
-    1-416-531-2084<br>
+    1-866-337-8633<br>
 <b>    http:</b>//www.domaindirect.com/supportform.html<br>
     This company may be contacted for domain login/passwords,<br>
     DNS/Nameserver changes, and general domain support questions.<br>
 <br>
 <b> Registrar of Record:</b> TUCOWS, INC.<br>
- Record last updated on 11-Apr-2005.<br>
- Record expires on 01-Jun-2006.<br>
+ Record last updated on 02-May-2006.<br>
+ Record expires on 01-Jun-2007.<br>
  Record created on 02-Jun-1998.<br>
 <br>
 <b> Domain servers in listed order:</b><br>
@@ -208,7 +208,7 @@ RECORD DOES NOT SIGNIFY DOMAIN AVAILABILITY.
 <div align="center">
  <table cellspacing="0" cellpadding="0" width="770" border="0">
   <tbody><tr>
-   <td width="100%" align="center" class="footer_text"><b>Copyright 2005 Tucows (Delaware) Inc.</b><br>Tucows Inc. and its subsidiaries have no liability for any content or goods on the Domain Direct site or the Internet, except as set forth in the following:<br><a href="http://www.domaindirect.com/terms.html">terms and conditions</a> | <a href="http://www.domaindirect.com/policy.html">security and privacy statement</a> | <a href="http://www.domaindirect.com/agreement.html">registration agreement</a></td>
+   <td width="100%" align="center" class="footer_text"><b>Copyright 2006 Tucows.com Co.</b><br>Tucows Inc. and its subsidiaries have no liability for any content or goods on the Domain Direct site or the Internet, except as set forth in the following:<br><a href="http://www.domaindirect.com/terms.html">terms and conditions</a> | <a href="http://www.domaindirect.com/policy.html">security and privacy statement</a> | <a href="http://www.domaindirect.com/agreement.html">registration agreement</a></td>
    <td width="7"><img src="/images/trans.gif" width="7" height="1" alt=""></td>
   </tr>
  </tbody></table>
@@ -219,9 +219,10 @@ RECORD DOES NOT SIGNIFY DOMAIN AVAILABILITY.
 var vlc = "0";
 var v = {};
 v["dd_page_id"] = "";
+v["dd_ad_id"] = "";
 </script>
 <script type="text/javascript" src="https://vs.domaindirect.com/zig.js"></script>
-<noscript><img src="https://vs.domaindirect.com/zag.gif?Log=1&v_jd=1&dd_page_id=" border="0" width="1" height="1" alt=""></noscript> 
+<noscript><img src="https://vs.domaindirect.com/zag.gif?Log=1&v_jd=1&dd_page_id=&dd_ad_id=" border="0" width="1" height="1" alt=""></noscript>
 
 
 
