--- a/f/fi/fin/finditquick.com.html
+++ b/f/fi/fin/finditquick.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the finditquick.com privacy policy that was archived on 2005-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051225190457id_/http%3A//www.finditquick.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the finditquick.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615003350id_/http%3A//finditquick.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>FindItQuick.com</title>
@@ -176,7 +176,7 @@ yes">&nbsp; </span>This privacy statement applies only to information collected 
   <tbody><tr>
     <td><table width="780" border="0" align="center" cellpadding="0" cellspacing="0">
       <tbody><tr>
-        <td width="780" height="25" align="center">Copyright 2000-2005 by Findit-Quick.com,Inc [2]</td>
+        <td width="780" height="25" align="center">Copyright 2000-2006 by Findit-Quick.com,Inc [2]</td>
       </tr>
     </tbody></table></td>
   </tr>
