--- a/i/ic/ico/iconocast.com.html
+++ b/i/ic/ico/iconocast.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the iconocast.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220023503id_/http%3A//www.iconocast.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iconocast.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615003507id_/http%3A//iconocast.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -43,7 +43,7 @@ MM_reloadPage(true);
   <div align="left"> </div>
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tbody><tr valign="top"> 
-      <td width="32" height="88" align="center" valign="bottom"><img src="img/iconocastpng.png" alt="Iconocast Logo" width="126" height="126" align="bottom"></td>
+      <td width="32" height="88" align="center" valign="bottom"><a href="index.html"><img src="img/iconocastpng.png" alt="Iconocast Logo" width="126" height="126" align="bottom"></a></td>
       <td align="center" valign="middle"><p><strong><a href="First_Law_Branding.html">Branding Laws</a> · <a href="Internet_Marketing.html"></a> <a href="Internet_Marketing.html"></a> <a href="Internet_Marketing.html">Internet Marketing</a> · <a href="eMarketing.html">eMarketing</a> · <a href="Internet_Advertising.html">Internet Advertising</a> · <a href="Online_Branding.html">Online Branding</a><br>
               <a href="SearchEngine_Optimization_Marketing.html">Search Engine Optimization &amp; Marketing</a> · <a href="Naming.html"> Naming</a> · <a href="privacy.htm">Privacy Policy </a> · <a href="index.html"> Home</a> · <a href="/contact.html"> Contact Us</a> </strong></p>
         <p><a href="services.htm"><strong>Our Services</strong></a> <strong>and</strong> <strong><a href="Designs/index.html"><span class="style14">AFFORDABLE WEBSITE DESIGNS</span></a></strong> 
@@ -66,10 +66,115 @@ MM_reloadPage(true);
 </tr></tbody></table>
 
 
-<div id="Content">
+<div id="Content"><table width="638" border="1" cellpadding="0" cellspacing="0" bordercolor="#FFFFFF" bgcolor="#FFCC00">
+                <tbody><tr>
+                  <td width="124" rowspan="5">&nbsp;<script type="text/javascript"><!--
+google_ad_client = "pub-8455692819975081";
+google_ad_width = 160;
+google_ad_height = 600;
+google_ad_format = "160x600_as";
+google_ad_type = "text";
+google_ad_channel ="";
+google_color_border = "FFCC00";
+google_color_bg = "FFCC00";
+google_color_link = "FF0000";
+google_color_url = "00CC00";
+google_color_text = "0066CC";
+//--></script>
+      <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script></td>
+                  <td height="42" colspan="2">&nbsp;
+                    <script type="text/javascript"><!--
+google_ad_client = "pub-8455692819975081";
+google_ad_width = 728;
+google_ad_height = 90;
+google_ad_format = "728x90_as";
+google_ad_type = "text_image";
+google_ad_channel ="";
+google_color_border = "FFCC00";
+google_color_bg = "FFCC00";
+google_color_link = "FF0000";
+google_color_url = "00CC00";
+google_color_text = "0066CC";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script></td>
+      </tr>
+                <tr>
+                  <td width="210" rowspan="2">&nbsp;<script type="text/javascript"><!--
+google_ad_client = "pub-8455692819975081";
+google_ad_width = 336;
+google_ad_height = 280;
+google_ad_format = "336x280_as";
+google_ad_type = "text_image";
+google_ad_channel ="";
+google_color_border = "FFCC00";
+google_color_bg = "FFCC00";
+google_color_link = "FF0000";
+google_color_url = "00CC00";
+google_color_text = "0066CC";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script></td>
+                  <td width="296">&nbsp;<!-- Search Google -->
+<center>
+<form method="get" action="http://www.google.com/custom" target="_top">
+<table bgcolor="#FFCC00">
+<tbody><tr><td nowrap="nowrap" valign="top" align="left" height="32">
+<a href="http://www.google.com/">
+<img src="http://www.google.com/logos/Logo_25wht.gif" border="0" alt="Google" align="middle"></a>
+<br>
+<input type="text" name="q" size="31" maxlength="255" value="">
+</td></tr>
+<tr><td valign="top" align="left">
+<input type="submit" name="sa" value="Search">
+<input type="hidden" name="client" value="pub-8455692819975081">
+<input type="hidden" name="forid" value="1">
+<input type="hidden" name="ie" value="ISO-8859-1">
+<input type="hidden" name="oe" value="ISO-8859-1">
+<input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#FFCC00;VLC:663399;AH:center;BGC:FFCC00;LBGC:336699;ALC:0000FF;LC:0000FF;T:000000;GFNT:0000FF;GIMP:0000FF;FORID:1;">
+<input type="hidden" name="hl" value="en">
+</td></tr></tbody></table>
+</form>
+</center>
+<!-- Search Google --></td>
+                </tr>
+                <tr>
+                  <td>&nbsp;<table border="0" align="center" cellpadding="0" cellspacing="0">
+  <tbody><tr>
+    <td align="center"><script language="JavaScript" src="http://www.websitealive4.com/1220/Visitor/vTracker.asp?groupid=1220&amp;departmentid="></script>
+        <img src="http://www.websitealive4.com/source/images/supporticons/alivechat_orange.gif" border="0" onclick="javascript:window.open('http://www.websitealive4.com/1220/rRouter.asp?groupid=1220&amp;departmentid=','guest','width=450,height=400');" style="cursor:pointer"></td>
+  </tr><tr>
+    <td align="center" style="background-color:#FF9900; padding:4px; font-size:9px; color:#fff; font-family:Verdana, Helvetica, sans-serif;"><a href="http://www.websitealive.com/" style="text-decoration:none; font-size:9px; color:#fff; font-family:Verdana, Helvetica, sans-serif;" target="_blank">Live help</a> by <a href="http://www.websitealive.com/" style="text-decoration:none; font-size:9px; color:#fff; font-family:Verdana, Helvetica, sans-serif;" target="_blank"><b>AliveChat</b></a></td>
+  </tr>
+</tbody></table></td>
+                </tr>
+                <tr>
+                  <td colspan="2">&nbsp;<script type="text/javascript"><!--
+google_ad_client = "pub-8455692819975081";
+google_ad_width = 728;
+google_ad_height = 15;
+google_ad_format = "728x15_0ads_al_s";
+google_ad_channel ="";
+google_color_border = "FFCC00";
+google_color_bg = "FFCC00";
+google_color_link = "FF0000";
+google_color_url = "00CC00";
+google_color_text = "0066CC";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script></td>
+      </tr>
+                <tr>
+                  <td colspan="2">&nbsp;<p align="center" class="style13">ADVERTISING BY ICONOCAST</p>
+     <p align="center"><a href="http://www.motivationbook.com/"><span class="style171"><span class="style12"><strong>Optimism, Happiness, Self Esteem, Creativity, Competency, Achieve Intrinsic Motivation; visit www.motivationbook.com</strong></span></span></a>      </p>
+      <p align="center"><strong><a href="http://www.iconocast.com/index.html">Iconocast is about learning and teaching without borders; we offer eMarketing, Internet Advertising, Internet Marketing, Search Engine Optimization, Search Engine Marketing, Online Branding, and eMarketing News Services.</a></strong> </p>
+      <p></p></td>
+      </tr>
+              </tbody></table>
+<p></p>
 
-  <h3 align="right">&nbsp;</h3>
-  <h2 class="Outline">Our commitment to your privacy, security and our Privacy Policy</h2>
+  <h2><strong>Our commitment to your privacy, security and our Privacy Policy</strong></h2>
   <p class="Quote"> <font color="#006600"><em><strong>Your privacy is of outmost importance to us. To better protect your privacy we provide this notice explaining our online information practices and the choices you can make about the way your information is collected and used. To make this notice easy to find, we make it available on our homepage and at every point where personally identifiable information may be requested. </strong></em></font> </p>
   <p>&nbsp;</p>
   <h3>How We Protect the Security of Your Information</h3>
