--- a/d/di/dia/dianaskitchen.com.html
+++ b/d/di/dia/dianaskitchen.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dianaskitchen.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218022732id_/http%3A//www.dianaskitchen.com/page/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dianaskitchen.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615003637id_/http%3A//dianaskitchen.com/page/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Privacy Policy - Diana's Kitchen</title>
