--- a/j/jp/jp1/jp18.com.html
+++ b/j/jp/jp1/jp18.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jp18.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214094441id_/http%3A//jp18.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jp18.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615004247id_/http%3A//www.jp18.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>&gt;&gt;&gt; Welcome to the jp18 members area &lt;&lt;&lt;</title>
