--- a/o/oj/ojr/ojr.org.html
+++ b/o/oj/ojr/ojr.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ojr.org privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219051847id_/http%3A//www.ojr.org/ojr/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ojr.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615004248id_/http%3A//www.ojr.org/ojr/privacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>OJR.org Privacy Policy</title>
@@ -15,7 +15,7 @@
 <div class="centercontainer">
 
 	<div class="masthead">
-		<a href="/" title="USC Annenberg Online Journalism Review"><img src="/ojr/includes/masthead.gif" width="483" height="80" alt="USC Annenberg Online Journalism Review" border="0" align="left"></a><a href="http://www.usc.edu/"><img src="/ojr/includes/usc.gif" width="70" height="80" alt="USC" border="0" align="right"></a>
+		<a href="http://www.ojr.org/" title="USC Annenberg Online Journalism Review"><img src="/ojr/includes/masthead.gif" width="483" height="80" alt="USC Annenberg Online Journalism Review" border="0" align="left"></a><a href="http://www.usc.edu/"><img src="/ojr/includes/usc.gif" width="70" height="80" alt="USC" border="0" align="right"></a>
 	</div>
 
 	<div class="leftcolumn">
@@ -23,28 +23,26 @@
 		<div class="leftnav">
 			<img src="/ojr/includes/navtop.gif" alt="" width="174" height="25"><br>
 			<img src="/ojr/images/sections.gif" width="142" height="21" alt="Sections" style="margin-left: 20px;"><br>
-			<a href="/ojr/stories/">Featured Articles</a><br>
-			<a href="/ojr/glaser/">Mark Glaser</a><br>
-			<a href="/ojr/blog/">News Blog</a><br>
-			<a href="/ojr/robert/">Editor's Blog</a><br>
+			<a href="http://www.ojr.org/ojr/stories/">Article Archive</a><br>
+			<a href="http://www.ojr.org/ojr/blog/">Readers' Blog</a><br>
 			
-			<a href="/ojr/wiki/"><img src="/ojr/images/wikis.gif" width="142" height="21" alt="Wikis" border="0" style="margin-top:10px"></a><br>
-			<a href="/ojr/wiki/ethics/">Ethics</a><br>
-			<a href="/ojr/wiki/calendar/">Events Calendar</a><br>
-			<a href="/ojr/wiki/reporting/">Reporting</a><br>
-			<a href="/ojr/wiki/make_money/">Revenue</a><br>
-			<a href="/ojr/wiki/video/">Video Production</a><br>
-			<a href="/ojr/wiki/writing/">Writing</a><br>
+			<a href="http://www.ojr.org/ojr/wiki/"><img src="/ojr/images/wikis.gif" width="142" height="21" alt="Wikis" border="0" style="margin-top:10px"></a><br>
+			<a href="http://www.ojr.org/ojr/wiki/ethics/">Ethics</a><br>
+			<a href="http://www.ojr.org/ojr/wiki/calendar/">Events Calendar</a><br>
+			<a href="http://www.ojr.org/ojr/wiki/make_money/">Making Money</a><br>
+			<a href="http://www.ojr.org/ojr/wiki/reporting/">Reporting</a><br>
+			<a href="http://www.ojr.org/ojr/wiki/video/">Video Production</a><br>
+			<a href="http://www.ojr.org/ojr/wiki/writing/">Writing</a><br>
 			
 			<img src="/ojr/images/resources.gif" width="142" height="21" alt="Resources" style="margin-left: 20px;margin-top:10px"><br>
-			<a href="/ojr/people/login.cfm">Log-In</a><br><a href="/ojr/people/register.cfm">Register</a><br>
-			<a href="/ojr/about_ojr/">About OJR</a><br>
-			<a href="/ojr/privacy/">Privacy Policy</a><br>
+			<a href="http://www.ojr.org/ojr/people/login.cfm">Log-In</a><br><a href="http://www.ojr.org/ojr/people/register.cfm">Register</a><br>
+			<a href="http://www.ojr.org/ojr/about_ojr/">About OJR</a><br>
+			<a href="http://www.ojr.org/ojr/privacy/">Privacy Policy</a><br>
 			
 			<img src="/ojr/images/delivered.gif" width="142" height="21" alt="OJR Delivered" style="margin-left: 20px;margin-top:10px"><br>
-			<a href="/ojr/people/subscribe.cfm">E-mail Newsletter</a><br>
-			<a href="/ojr/stories/rss.xml"><img src="/ojr/images/rss.gif" width="35" height="13" alt="RSS" border="0" valign="bottom"> Article Feed</a><br>
-			<a href="/ojr/stories/blog.xml"><img src="/ojr/images/rss.gif" width="35" height="13" alt="RSS" border="0" valign="bottom"> Blog Feed</a><br>
+			<a href="http://www.ojr.org/ojr/people/subscribe.cfm">OJR by E-mail</a><br>
+			<a href="http://www.ojr.org/ojr/stories/rss.xml"><img src="/ojr/images/rss.gif" width="35" height="13" alt="RSS" border="0" valign="bottom"> Article Feed</a><br>
+			<a href="http://www.ojr.org/ojr/stories/blog.xml"><img src="/ojr/images/rss.gif" width="35" height="13" alt="RSS" border="0" valign="bottom"> Blog Feed</a><br>
 
 			<form action="http://www.ojr.org/results.cfm" method="post" style="margin-left: 20px;;margin-top:10px">
 			<img src="http://www.ojr.org/ojr/images/search.gif" width="142" height="21" alt="Search"><br>
@@ -52,36 +50,25 @@
 			<img src="/ojr/includes/navbottom.gif" alt="" width="174" height="25"><br>
 		</div>
 
+		
+
 	</div>
 	
 	<div class="rightcolumn">
 
 		<div class="dropmenu">
 
-<script language="JavaScript">
+	Supported by <a href="http://www.annenberg.edu">The Annenberg Center for
+Communication at USC</a>
 
-function AutoLink()
-{
-var number = document.redirectform.newlink.selectedIndex;
-location.href = document.redirectform.newlink.options[number].value;
-}
-</script>
 
-	<form name="redirectform">
-	<select name="newlink" onchange="AutoLink(this.form)" class="menu">
-		<option value="http://ascweb.usc.edu/" selected="">USC Annenberg Websites
-		</option><option value="http://ascweb.usc.edu/"> Annenberg School for Communication
-		</option><option value="http://digitalcenter.org/"> Center for the Digital Future
-		</option><option value="http://www.japanmediareview.com/"> Japan Media Review
-		</option><option value="http://www.wkconline.org/index.php"> Western Knight Center
-	</option></select>
-	</form>
 
 		</div>
 
 		<div class="rightcontent">
 
 	
+
 
 	<!-- START CONTENT -->
 
@@ -125,7 +112,9 @@ Phone: 213-740-0948</p><p>
 
 <!-- BEGIN FOOTER -->
 
-		<div class="copyright" align="center">©1999-2005 USC Annenberg Online Journalism Review.</div>
+		<div class="copyright" align="center">©1999-2006 USC Annenberg Online Journalism Review.</div>
+
+		
 
 		</div>
 
@@ -134,6 +123,13 @@ Phone: 213-740-0948</p><p>
 <div class="clearer">&nbsp;</div>
 
 </div>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-384019-1";
+urchinTracker();
+</script>
 
 
 
