--- a/m/mo/mou/mountainroseherbs.com.html
+++ b/m/mo/mou/mountainroseherbs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mountainroseherbs.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231194326id_/http%3A//www.mountainroseherbs.com/privicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mountainroseherbs.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615004334id_/http%3A//www.mountainroseherbs.com/privicy.php) for the most accurate reproduction.-->
 
 <html><head><title>Mountain Rose Herbs | Privicy Policy </title>
 </head><body style="margin:0; padding:0" background="http://www.mountainroseherbs.com/bg.gif" bgcolor="#D7AC75" link="#454B00" vlink="#454B00" alink="#000000">
@@ -10,7 +10,7 @@
 <a name="top">
 <!-- ===== START IMAGE MAPS ===== -->
 <map name="tabsmap">
-<area shape="rect" coords="258,1,336,35" href="http://www.mountainroseherbs.com/Merchant2/merchant.mvc?Screen=BASK&amp;Store=mrose" alt="View Cart/Check Out">
+<area shape="rect" coords="258,1,336,35" href="http://www.cart32.com/cgi-bin/cart32.exe/MountainRoseHerbs-ItemList" alt="View Cart/Check Out">
 <area shape="rect" coords="197,1,257,35" href="http://www.mountainroseherbs.com/contact.php" alt="Contact Us">
 <area shape="rect" coords="129,1,196,35" href="http://www.mountainroseherbs.com/specials/specials.php" alt="Monthly Sales">
 <area shape="rect" coords="65,2,128,35" href="http://mountainroseherbs.com/catalogrequest/catalog.php" alt="Free Catalog!">
@@ -36,7 +36,7 @@
 <!-- ====== START SEARCH BOX ===== -->
 <table cellspacing="0" cellpadding="0" border="0" width="148"><tbody><tr><td colspan="3"><img src="http://www.mountainroseherbs.com/searchforproducts.gif" width="148" height="19"><br clear="all"></td></tr><tr><td width="1" bgcolor="#103118"><img src="http://www.mountainroseherbs.com/spacer.gif" width="1" height="1"><br clear="all"></td><td width="146" bgcolor="#D6AD73" align="left" valign="top">&nbsp;<input type="text" size="9" maxlength="50" name="sp-q" value="" onfocus="if (value == 'Search!') {value =''}" onblur="if (value == '') {value = 'Search!'}" style="font-family:monospace;">&nbsp;<input type="image" src="http://www.mountainroseherbs.com/findit.gif" border="0" alt="Find It" align="top"><input type="hidden" name="sp-a" value="sp10015307">
 <input type="hidden" name="sp-p" value="phrase">
-<br><img src="http://www.mountainroseherbs.com/spacer.gif" width="146" height="1"><br clear="all"></td><td width="1" bgcolor="#103118"><img src="http://www.mountainroseherbs.com/spacer.gif" width="1" height="1"><br clear="all"></td></tr><tr><td width="148" height="5" colspan="3"><img src="http://www.mountainroseherbs.com/boxbottom.gif" width="148" height="5"><br clear="all"></td></tr></tbody></table>
+<br><img src="http://www.mountainroseherbs.com/spacer.gif" width="146" height="1"><br clear="all"></td><td width="1" bgcolor="#103118"><img src="spacer.gif" width="1" height="1"><br clear="all"></td></tr><tr><td width="148" height="5" colspan="3"><img src="http://www.mountainroseherbs.com/boxbottom.gif" width="148" height="5"><br clear="all"></td></tr></tbody></table>
 <!-- ====== END SEARCH BOX ======= -->
 
 <img src="http://www.mountainroseherbs.com/spacer.gif" width="148" height="12"><br><a href="http://www.mountainroseherbs.com/index.php"><img src="http://www.mountainroseherbs.com/hometab.gif" width="159" height="23" border="0" alt="Home"></a><br><img ismap="" usemap="#menumap" src="http://www.mountainroseherbs.com/menu.gif" width="159" height="188" border="0">
@@ -44,7 +44,9 @@
 
 <font size="2"><font color="#D7AC75"><p>
 <a href="http://www.mountainroseherbs.com/tools/tools.php"><font color="#D7AC75">Accessories &amp; Tools</font></a><br>
+<a href="http://www.mountainroseherbs.com/fwater/fwater.php"><font color="#D7AC75">Aroma Sprays and Flower Waters</font></a><br>
 <a href="http://www.mountainroseherbs.com/aroma/aroma.php"><font color="#D7AC75">Aromatherapy</font></a><br>
+<a href="http://www.mountainroseherbs.com/baby/baby.php"><font color="#D7AC75">Babies/Children</font></a><br>
 <a href="http://www.mountainroseherbs.com/bath/bath.php"><font color="#D7AC75">Body and Bath</font></a><br>
 <a href="http://www.mountainroseherbs.com/books/books.php"><font color="#D7AC75">Books</font></a><br>
 <a href="http://www.mountainroseherbs.com/bulkherb/bulkherb.php"><font color="#D7AC75">Bulk Herbs</font></a><br>
@@ -54,10 +56,9 @@
 <a href="http://www.mountainroseherbs.com/bulkoil/bulkoil.php"><font color="#D7AC75">Carrier Oils</font></a><br>
 <a href="http://www.mountainroseherbs.com/clay/clay.php"><font color="#D7AC75">Clays</font></a><br>
 <a href="http://www.mountainroseherbs.com/supply/bottles.php"><font color="#D7AC75">Containers</font></a><br>
-<a href="http://www.mountainroseherbs.com/aroma/ess.php"><font color="#D7AC75">Essential Oils</font></a><br>
+<a href="http://www.mountainroseherbs.com/aroma/aroma.php"><font color="#D7AC75">Essential Oils</font></a><br>
 <a href="http://www.mountainroseherbs.com/face/face.php"><font color="#D7AC75">Facial Care</font></a><br>
 <a href="http://www.mountainroseherbs.com/flavoring_extracts/extracts.php"><font color="#D7AC75">Flavoring Extracts</font></a><br>
-<a href="http://www.mountainroseherbs.com/fwater/fwater.php"><font color="#D7AC75">Flower Waters</font></a><br>
 <a href="http://www.mountainroseherbs.com/tea_bev/tea_green.php"><font color="#D7AC75">Green, Black &amp; Red Teas</font></a><br>
 <a href="http://www.mountainroseherbs.com/hair/hair.php"><font color="#D7AC75">Hair Care</font></a><br>
 <a href="http://www.mountainroseherbs.com/extract/extract.php"><font color="#D7AC75">Herbal Extracts and Syrups</font></a><br>
@@ -169,7 +170,7 @@
 <b><i>These pages are best viewed while sipping tea</i></b>
 </font></div><font size="2">
 <p>
-</p><div align="right"><font face="Arial,Helvetica,Sans-Serif" size="1"><b>Mountain Rose Herbs</b><br>PO Box 50220, Eugene, OR 97405<br>USA<br>(800) 879-3337<br>FAX - (510) 217-4012<br>Outside USA - (541) 741-7341<br><a href="mailto:customerservice@mountainroseherbs.com">customerservice@mountainroseherbs.com</a><hr width="250" align="right">©  Copyright Protected 2000-2005 Mountain Rose Inc<br>Site Design: <a href="http://fruitiondesign.com/">Fruition Design Collective</a></font></div></font></td></tr></tbody></table></td></tr></tbody></table></form></a></div><a name="top">
+</p><div align="right"><font face="Arial,Helvetica,Sans-Serif" size="1"><b>Mountain Rose Herbs</b><br>PO Box 50220, Eugene, OR 97405<br>USA<br>(800) 879-3337<br>FAX - (510) 217-4012<br>Outside USA - (541) 741-7307<br><a href="mailto:customerservice@mountainroseherbs.com">customerservice@mountainroseherbs.com</a><hr width="250" align="right">©  Copyright Protected 2000-2006 Mountain Rose Inc<br>Site Design: <a href="http://fruitiondesign.com/">Fruition Design Collective</a></font></div></font></td></tr></tbody></table></td></tr></tbody></table></form></a></div><a name="top">
 
 
 
