--- a/w/we/wel/well.com.html
+++ b/w/we/wel/well.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the well.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212144324id_/http%3A//www.well.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the well.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615004356id_/http%3A//www.well.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en"><head>
 <title>The WELL - Privacy Polity</title>
@@ -75,9 +75,9 @@ function set_focus(curr)
 </tr>
 </tbody></table>
 
-<!--&nbsp;&nbsp;<span class="small2"><b><a 
-href="http://www.well.com/status.html">System status</a>:</b> Email problems 
-December 1, 2005 between 9:30 a.m. and noon (PST)</span>-->
+<!---<span class="small2"><b><a 
+href="http://www.well.com/status.html">System Status Update</a> </b>Jun 7 07:50 PDT 
+- All systems operating normally after the move to a new RAID</span>--->
 
 
 <table width="100%" border="0" cellpadding="12" cellspacing="12" summary="content layout table">
