findit-quick.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 2538,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.23,
  "homepage_snapshot_redirected_domain": "findit-quick.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060406015351id_/http://www.findit-quick.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060406015351id_/http%3A//findit-quick.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "findit-quick.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615004530id_/http%3A//www.findit-quick.com/privacy.html",
  "policy_title": "FindItQuick.com",
  "policy_url": "findit-quick.com/privacy.html",
  "sha1": "27ec1f7ee800af9f32561c8388acf305935a5949",
  "simhash": 12149129663717450419,
  "simhash_updated": false,
  "site_hostname": "findit-quick.com",
  "site_url": "http://findit-quick.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615004530",
  "word_count": 401,
  "year": 2006
}

--- a/f/fi/fin/findit-quick.com.html
+++ b/f/fi/fin/findit-quick.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the findit-quick.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219040847id_/http%3A//findit-quick.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the findit-quick.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615004530id_/http%3A//www.findit-quick.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>FindItQuick.com</title>
@@ -176,7 +176,7 @@ yes">&nbsp; </span>This privacy statement applies only to information collected 
   <tbody><tr>
     <td><table width="780" border="0" align="center" cellpadding="0" cellspacing="0">
       <tbody><tr>
-        <td width="780" height="25" align="center">Copyright 2000-2005 by Findit-Quick.com,Inc [2]</td>
+        <td width="780" height="25" align="center">Copyright 2000-2006 by Findit-Quick.com,Inc [2]</td>
       </tr>
     </tbody></table></td>
   </tr>
