--- a/e/e-/e-c/e-classifieds.net.html
+++ b/e/e-/e-c/e-classifieds.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the e-classifieds.net privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231185920id_/http%3A//www.e-classifieds.net/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the e-classifieds.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615004555id_/http%3A//www.e-classifieds.net/about/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><head>
 <title>e-Classifieds: Classified ads software programs</title>
@@ -21,7 +21,7 @@
 <script type="text/javascript" src="http://www.e-classifieds.net/js/HSutils.js"></script>
 <script type="text/javascript" src="http://www.e-classifieds.net/js/HSSlideOutMenus.js"></script>
 <script type="text/javascript" src="http://www.e-classifieds.net/js/HStextswitcher.js"></script>
-<script type="text/javascript" src="http://www.e-classifieds.net/js/HSmenus2.js"></script>
+<script type="text/javascript" src="http://www.e-classifieds.net/js/HSmenus.js"></script>
 <script type="text/javascript" src="http://www.e-classifieds.net/js/HSstyleswitcher.js"></script>
 <script type="text/javascript" src="http://www.e-classifieds.net/js/HSfontswitcher.js"></script>
 </head>
@@ -158,9 +158,9 @@
 
 </div>
 <p class="printer"><a href="javascript:void(0);" onclick="setActiveStyleSheet('Normal'); return false;">Return to Normal Page Layout</a></p>
-<p class="printer">Copyright © 1995-2005 Hagen Software Inc.</p>
+<p class="printer">Copyright © 1995-2006 Hagen Software Inc.</p>
 <p class="guidebar guidebarbottom"><a href="http://www.hagenhosting.com/"><img src="http://www.e-classifieds.net/images/poweredby.png" alt="favicon" title="This site is hosted by Hagen Hosting" width="180" height="16" class="frontpageimage"></a>
-<a href="http://www.e-classifieds.net/about/access.html">Site Access Agreement</a> | <a href="http://www.e-classifieds.net/about/privacy.html">Privacy Statement</a> | <a href="http://www.e-classifieds.net/about/legal.html">Legal</a> | Copyright © 1995-2005 <a href="http://www.hagensoftware.com">Hagen Software Inc.</a> | <a href="http://www.e-classifieds.net/about/contact.html">Contact us</a>
+<a href="http://www.e-classifieds.net/about/access.html">Site Access Agreement</a> | <a href="http://www.e-classifieds.net/about/privacy.html">Privacy Statement</a> | <a href="http://www.e-classifieds.net/about/legal.html">Legal</a> | Copyright © 1995-2006 <a href="http://www.hagensoftware.com">Hagen Software Inc.</a> | <a href="http://www.e-classifieds.net/about/contact.html">Contact us</a>
 </p>
 
 </body></html>
