--- a/n/ny/nyi/nyi.net.html
+++ b/n/ny/nyi/nyi.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nyi.net privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231210020id_/http%3A//www.nyi.net/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nyi.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615004649id_/http%3A//nyi.net/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -94,7 +94,7 @@ a:hover{color:#4c4c4c}
             • </a><a href="contact.html" target="_top" class="menu">Contact</a></td>
         </tr>
         <tr> 
-          <td colspan="2" height="34" background="images/footer.gif" align="center" style="color:#ffffff">© 2004 The 
+          <td colspan="2" height="34" background="images/footer.gif" align="center" style="color:#ffffff">© 2006 The 
             New York Internet Company, Inc. All Rights Reserved <br> <a href="privacy.html" target="_top" class="menu">Privacy 
             Policy • </a> <a href="terms.html" target="_top" class="menu">Terms 
             &amp; Conditions • </a><a href="policy.html" target="_top" class="menu">Acceptable 
