traveleurope.it (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "travel",
  "char_count": 5028,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.88,
  "homepage_snapshot_redirected_domain": "traveleurope.it",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402221903id_/http://traveleurope.it/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402221903id_/http%3A//traveleurope.it",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "traveleurope.it",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615005045id_/http%3A//traveleurope.it/policy.html",
  "policy_title": "Traveleurope: Privacy policy",
  "policy_url": "traveleurope.it/policy.html",
  "sha1": "af51c3f721e02d7a7e060ec56ff3cd0f56a5f17a",
  "simhash": 12170539939259397548,
  "simhash_updated": false,
  "site_hostname": "traveleurope.it",
  "site_url": "http://traveleurope.it",
  "smog": 14.98,
  "strict_updated": false,
  "timestamp": "20060615005045",
  "word_count": 822,
  "year": 2006
}

--- a/t/tr/tra/traveleurope.it.html
+++ b/t/tr/tra/traveleurope.it.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the traveleurope.it privacy policy that was archived on 2005-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051222033820id_/http%3A//traveleurope.it/policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the traveleurope.it privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615005045id_/http%3A//traveleurope.it/policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Traveleurope: Privacy policy</title>
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-<div id="logohead"><a href="/"><img src="/img/logo_home.gif" alt="Traveleurope Homepage"></a></div>
+<div id="logohead"><a href="/"><img src="/img/logo_home_eng.gif" alt="Traveleurope Homepage"></a></div>
 <table cellspacing="1" id="mainTable">
   <!-- inizio header comune -->
   <tbody><tr>
