--- a/h/ho/hoo/hoover.com.html
+++ b/h/ho/hoo/hoover.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hoover.com privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217231959id_/http%3A//www.hoover.com/dbPages/xq/Pop/qx/PrivacyPolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hoover.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615005049id_/http%3A//hoover.com/dbPages/xq/Pop/qx/PrivacyPolicy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>The Hoover Company</title>
@@ -170,4 +170,4 @@ height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
 
 
 
-<!--Session 506337207--></center></body></html>
+<!--Session 58069144--></center></body></html>
