syvum.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 5659,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.33,
  "homepage_snapshot_redirected_domain": "syvum.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060315124627id_/http://www.syvum.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060315124627id_/http%3A//syvum.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "syvum.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615005740id_/http%3A//www.syvum.com/legal/privacy.html",
  "policy_title": "Syvum Privacy Policy",
  "policy_url": "syvum.com/legal/privacy.html",
  "sha1": "d94a6713e40d8d286ac10bede0e96f8dc228886d",
  "simhash": 4176910353471180180,
  "simhash_updated": false,
  "site_hostname": "syvum.com",
  "site_url": "http://syvum.com",
  "smog": 13.08,
  "strict_updated": false,
  "timestamp": "20060615005740",
  "word_count": 961,
  "year": 2006
}

--- a/s/sy/syv/syvum.com.html
+++ b/s/sy/syv/syvum.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the syvum.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212024909id_/http%3A//syvum.com/legal/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the syvum.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615005740id_/http%3A//www.syvum.com/legal/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title> Syvum Privacy Policy </title><meta name="author" content="Syvum"><meta name="copyright" content="Syvum Technologies Inc."><meta name="publisher" content="Syvum"></head><body bgcolor="#FFFFFF" text="#000000" link="#ff0000" vlink="#0000ff" alink="#FF0000">
 
@@ -76,9 +76,9 @@
       }
     else
       {
-        document.write('<b><a href=/members/><font color=navy>Sign In</font></a> / <a href=/cgi/order.cgi?club12><font color=navy>Register as Member</font></a></b></font>');
+        document.write('<b><a href=/members/><font color=navy>Sign In</font></a> / <a href=/members/register.html><font color=navy>Register as Member</font></a></b></font>');
       }
-</script><b><a href="/members/"><font color="navy">Sign In</font></a> / <a href="/cgi/order.cgi?club12"><font color="navy">Register as Member</font></a></b></font><noscript>
+</script><b><a href="/members/"><font color="navy">Sign In</font></a> / <a href="/members/register.html"><font color="navy">Register as Member</font></a></b></font><noscript>
 <a href=/cgi/members/home.cgi><font color=navy>Syvum Members</font></a> | <a href=/cgi/members/logout.cgi><font color=navy>Sign off</font></a></font>
 </noscript>
 </td></tr>
@@ -88,7 +88,7 @@ document.writeln('<td bgcolor='+syvum_bs_a[1]+' align=right>');
 </script><td bgcolor="#ffc68c" align="right">
 <noscript><td bgcolor=#ffc68c align=right></noscript>
 <input type="text" size="40" maxlength="80" name="words"> &nbsp; <input type="submit" value="Search">&nbsp;<br>
-<font size="-2" color="navy" face="arial">Search Syvum web site for information or quizzes of your interest. <script language="JavaScript">document.writeln('Example: <a href=/cgi/search.cgi?words='+randomSyvumTipUrl[randomSyvumTipNumber]+'><font color=navy>'+randomSyvumTip[randomSyvumTipNumber]+'</font></a>');</script>Example: <a href="/cgi/search.cgi?words=usa+map+quiz"><font color="navy">usa map quiz</font></a>
+<font size="-2" color="navy" face="arial">Search Syvum web site for information or quizzes of your interest. <script language="JavaScript">document.writeln('Example: <a href=/cgi/search.cgi?words='+randomSyvumTipUrl[randomSyvumTipNumber]+'><font color=navy>'+randomSyvumTip[randomSyvumTipNumber]+'</font></a>');</script>Example: <a href="/cgi/search.cgi?words=Grandpa's+age+puzzle"><font color="navy">Grandpa's age puzzle</font></a>
 &nbsp;</font></td>
 </tr>
 </tbody></table>
@@ -98,10 +98,9 @@ document.writeln('<td bgcolor='+syvum_bs_a[1]+' align=right>');
 <td valign="top">
 <p><font face="arial" size="-1"><a href="http://es.syvum.com/" target="_blank"><font color="#0000ff"><b>ES.Syvum.com</b></font></a></font><br><font color="navy" size="-2" face="arial">in Spanish</font><br><font face="arial" size="-1"><a href="http://br.syvum.com/" target="_blank"><font color="#0000ff"><b>BR.Syvum.com</b></font></a></font><br><font color="navy" size="-2" face="arial">in Portuguese</font><br><img src="/images/phone.jpg" height="32" width="17" alt="Syvum On Your Cell Phone" align="right"><font face="arial" size="-1"><a href="/mobile.html"><font color="#0000ff"><b>Syvum Mobile</b></font></a></font><br><font color="navy" size="-2" face="arial">on your cell phone!</font></p>
 <p style="color: #800000; font-family: arial; font-size=70%;">Special Features:
-<br><a href="/fun/christmas/"><b>Christmas Games</b></a>
-<br><a href="/fun/christmas/#recipes"><b>Christmas Recipes</b></a>
-<br><a href="/fun/music/"><b>Music Quizzes</b></a>
-<br><a href="/learn/"><b>Foreign Languages</b></a><br>
+<br><span id="syvum_fifa_span"><a href="/fun/sports/football/world_cup/fifa_2006/"><b>World Cup Football!</b><br>- Germany 2006</a></span><br>
+ - <a href="/fun/sports/football/world_cup/">Past Cups</a>
+<br><a href="/learn/"><b>Learn Languages</b></a><br>
  - <a href="/learn/phrases/">Phrases</a><br>
  - <a href="/learn/languages/">Words</a>
 </p>
@@ -112,7 +111,7 @@ if (document.all)
   {
     if (ads == "no")
       {
-        document.writeln('<p><span style="cursor:pointer;" onclick="document.all.syvum_g_sky.style.display = \'none\' == document.all.syvum_g_sky.style.display ? \'\' : \'none\';"><font color=blue face=arial size=-1><b>See ads related to this topic</b></font></span>');
+        document.writeln('<p><span id="syvum_span_sky" style="cursor:pointer;" onclick="document.all.syvum_g_sky.style.display = \'none\' == document.all.syvum_g_sky.style.display ? \'\' : \'none\';document.all.syvum_span_sky.style.display = \'none\';"><font color=blue face=arial size=-1><b>See ads related to this topic</b></font></span>');
         document.writeln('<div id="syvum_g_sky" style="display:none">');
       }
   }
@@ -120,12 +119,12 @@ if (document.all)
 </script>
 <script language="JavaScript">
   google_ad_client = "pub-0582656916058535";
-  google_alternate_ad_url = "http://www.syvum.com/cgi/showad.cgi?/home/syvum/public_html/legal/privacy.html&ad=sky_ad";
+  google_alternate_ad_url = "http://www.syvum.com/cgi/showad.cgi?bg=FFFFFF&footer=FFE6BC&text=0000FF&size=vert&reqpath=/legal/privacy";
   google_ad_width = 120;
   google_ad_height = 600;
   google_ad_format = "120x600_as";
   google_ad_type = "text_image";
-  google_ad_channel ="9034378402";
+  google_ad_channel = "9034378402";
   google_color_border = "FFFFFF";
   google_color_bg = "FFFFFF";
   google_color_link = "0000FF";
@@ -167,21 +166,51 @@ else
 <tr><td onmouseover="gIn(this);" onmouseout="gOut(this);"><a href="/translation/">Online Translation - Dictionary</a></td></tr>
 <tr><td onmouseover="gIn(this);" onmouseout="gOut(this);"><a href="/translation/services.html">Translation Services</a></td></tr>
 <tr><td onmouseover="gIn(this);" onmouseout="gOut(this);"><a href="/cgi/redirect.cgi?syvumclickv">One-Click Lookups</a></td></tr>
-<tr><td onmouseover="gIn(this);" onmouseout="gOut(this);"><a href="/translation/translation_services.html">Language Translation Services</a></td></tr>
 </tbody></table>
 </p><p>
 <table width="120">
 <tbody><tr><td><img alt="" width="1" height="1"></td></tr>
 </tbody></table>
-<table bgcolor="#ffdddd" width="100%">
+</p><p>&nbsp;</p>
+<table width="100%">
 <tbody><tr><td align="center">
-<b><a href="/cgi/redirect.cgi?http://www.syvum.com/contests/">
-<font color="maroon" size="-1" face="arial">$$$ WIN $$$</font><br><font color="maroon" size="-1" face="arial">Syvum Quizenius<br>Trivia Contest!</font></a></b>
+<b><a target="_blank" href="http://www.rockle.com/yap/?bottom">
+<font color="blue" size="-1" face="arial">* Rockle YAP *</font><br><font color="blue" size="-2" face="arial">People Search<br>Meet other interesting people</font></a></b>
 </td></tr></tbody></table>
-</p></td>
+</td>
 <td bgcolor="#c9d7f2" width="1"><img height="1" width="1" alt=""></td>
+<td width="12"><img height="1" width="1" alt=""></td>
 <td width="100%" valign="top">
 <center>
+
+<table border="0" width="500" style="font-size:70%;font-family:arial;"><tbody><tr>
+<td align="center" id="syvum_fifa_td">
+<a href="/fun/sports/football/world_cup/"><font color="red"><b>NEW! - FIFA World Cup Football Germany 2006:<br>Soccer Trivia Quiz Games from Syvum</b></font></a></td><td align="center" id="syvum_yap_td"><a href="http://www.rockle.com/yap/servlet/yapServlet"><font color="red"><b>NEW! - Free dating and matrimony<br>on Rockle Yap</b></font></a></td></tr></tbody></table>
+
+<script language="JavaScript">
+//<!--
+if (ads == "no")
+  {
+  }
+else if (setTimeout)
+  {
+    setTimeout("syvum_change_td_color1()", 3000);
+  }
+
+function syvum_change_td_color1()
+{
+  document.getElementById('syvum_fifa_td').style.background = "yellow";
+  document.getElementById('syvum_fifa_span').style.background = "yellow";
+  setTimeout("syvum_change_td_color2()", 3000);
+}
+
+function syvum_change_td_color2()
+{
+  document.getElementById('syvum_yap_td').style.background = "yellow";
+}
+//-->
+</script>
+
 <script language="JavaScript">
 <!--
    if (ads == "no")
@@ -189,25 +218,13 @@ else
      }
    else
      {
-       var ccl9_syvum;
-       ccl9_syvum = getVar("Cl_Syvum_c9");
-       if (ccl9_syvum == null || ccl9_syvum == "")
-         {
-           document.writeln('<scr' + 'ipt language="JavaScript" src="http://dist.belnk.com/4/placement/1389/"></script>');
-               ccl9_syvum = 1;
-         }
-
-       var expDate = new Date();
-       expDate.setTime(expDate.getTime() + 43200000);
-       document.cookie = "Cl_Syvum_c9="+ ccl9_syvum + "; expires=" + expDate.toGMTString() + "; path=/";
-
        if (document.body)
          {
            document.cookie = "windoww="+ document.body.offsetWidth + "; path=/";
          }
      }
-// --&gt;
-
+// -->
+</script>
 <script language="JavaScript">
 <!--
    if (ads == "no")
@@ -221,8 +238,7 @@ else
 </script><iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="NO" width="468" height="60" src="http://ad.yieldmanager.com/imp?z=4&amp;s=74&amp;t=3"></iframe>
 
 <noscript>
-<a href="http://c4.maxserving.com/adclick/site=5650/area=ros/aamsz=banner/PageID=5972117916" target="_blank">
-<img src="http://c4.maxserving.com/iserver/site=5650/area=ros/aamsz=banner/PageID=5972117916" border="0"></A>
+<IFRAME FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=468 HEIGHT=60 SRC="http://ad.yieldmanager.com/imp?z=4&s=74&t=3"></IFRAME>
 </noscript>
 <br>
 <script language="JavaScript">
@@ -242,7 +258,7 @@ if (document.all)
     google_ad_width = 728;
     google_ad_height = 15;
     google_ad_format = "728x15_0ads_al";
-    google_ad_channel ="9034378402";
+    google_ad_channel = "9034378402";
     google_color_border = "FFFFFF";
     google_color_bg = "FFFFFF";
     google_color_link = "0000FF";
@@ -418,7 +434,7 @@ if (document.all)
   {
     if (ads == "no")
       {
-        document.writeln('<p><span id="syvum_span_bot" style="cursor:pointer;" onclick="document.all.syvum_g_bot.style.display = \'none\' == document.all.syvum_g_bot.style.display ? \'\' : \'none\';"><font color=blue face=arial size=-1><b>See ads related to this topic</b></font></span>');
+        document.writeln('<p><span id="syvum_span_bot" style="cursor:pointer;" onclick="document.all.syvum_g_bot.style.display = \'none\' == document.all.syvum_g_bot.style.display ? \'\' : \'none\';document.all.syvum_span_bot.style.display = \'none\';"><font color=blue face=arial size=-1><b>See ads related to this topic</b></font></span>');
         document.writeln('<div id="syvum_g_bot" style="display:none">');
       }
   }
@@ -426,7 +442,7 @@ if (document.all)
 </script>
 <script type="text/javascript">
 google_ad_client = "pub-0582656916058535";
-google_alternate_ad_url = "http://www.syvum.com/cgi/showad.cgi";
+google_alternate_ad_url = "http://www.syvum.com/cgi/showad.cgi?bg=FFFFFF&footer=FFE6BC&text=0000FF&size=box&reqpath=/legal/privacy";
 google_ad_width = 336;
 google_ad_height = 280;
 google_ad_format = "336x280_as";
@@ -472,9 +488,9 @@ if (document.all)
 <font size="-2" face="verdana">Syvum in other languages: <a href="http://es.syvum.com/" target="_blank"><font color="red">Spanish / Español</font></a>, <a href="http://br.syvum.com/" target="_blank"><font color="red">Portuguese / Português</font></a></font>
 </p></td>
 </tr>
-<tr><td colspan="3"><script language="JavaScript">document.write('<table width="100%" bgcolor='+syvum_bs_a[2]+' cellspacing=0 border=0 style="font: normal 10pt arial;">');</script><noscript><table width="100%" bgcolor=#800040 cellspacing=0 border=0 style="font: normal 10pt arial;"></noscript><table width="100%" bgcolor="#800040" cellspacing="0" border="0" style="font: normal 10pt arial;">
+<tr><td colspan="4"><script language="JavaScript">document.write('<table width="100%" bgcolor='+syvum_bs_a[2]+' cellspacing=0 border=0 style="font: normal 10pt arial;">');</script><noscript><table width="100%" bgcolor=#800040 cellspacing=0 border=0 style="font: normal 10pt arial;"></noscript><table width="100%" bgcolor="#800040" cellspacing="0" border="0" style="font: normal 10pt arial;">
 <tbody><tr><td width="33%"><a href="/contact.html"> <font color="white" size="-2">Contact Info</font></a></td>
-<td align="center" width="33%"><font color="white" size="-2"> © 1999-2005, Syvum Technologies Inc. </font></td>
+<td align="center" width="33%"><font color="white" size="-2"> © 1999-2006, Syvum Technologies Inc. </font></td>
 <td align="right" width="33%">
 <a href="/legal/privacy.html"> <font color="white" size="-2">Privacy Policy</font></a>
 <a href="/legal/copyrt.html"> <font color="white" size="-2">Disclaimer and Copyright</font></a></td>
