selfhelpmagazine.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 2381,
  "classifier_probability": 0.8,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.1,
  "homepage_snapshot_redirected_domain": "selfhelpmagazine.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402220352id_/http://selfhelpmagazine.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402220352id_/http%3A//selfhelpmagazine.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "selfhelpmagazine.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615010521id_/http%3A//selfhelpmagazine.com/privacy.html",
  "policy_title": "Privacy Policy",
  "policy_url": "selfhelpmagazine.com/privacy.html",
  "sha1": "6519836ce7de9ed48a37d6ef2eb997cd7edc74bb",
  "simhash": 7141399064287961640,
  "simhash_updated": false,
  "site_hostname": "selfhelpmagazine.com",
  "site_url": "http://selfhelpmagazine.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615010521",
  "word_count": 394,
  "year": 2006
}

--- a/s/se/sel/selfhelpmagazine.com.html
+++ b/s/se/sel/selfhelpmagazine.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the selfhelpmagazine.com privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217152256id_/http%3A//selfhelpmagazine.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the selfhelpmagazine.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615010521id_/http%3A//selfhelpmagazine.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"> 
@@ -77,9 +77,21 @@ function turn_over(ImageName) {
       </tbody></table></td>
   </tr>
   <tr>
-    <td align="right"><table width="400" height="60" border="0" cellpadding="0" cellspacing="0"><tbody><tr align="center"><td height="35" align="right" bgcolor="#8D5BC7"><div align="left"><div align="left"><font color="#FFCC33" face="Times New Roman, Times, serif"><font size="+6" face="French Script MT"><em><strong>S</strong></em></font><font size="+3" face="French Script MT"><em><font face="Georgia, Times New Roman, Times, serif">elfhelp</font></em></font><font face="French Script MT"><font size="+3" face="Georgia, Times New Roman, Times, serif"><em>4</em></font></font><font size="+3" face="French Script MT"><strong><font size="+6">L</font></strong><em><font face="Georgia, Times New Roman, Times, serif">ife </font></em></font></font> <font color="#FFCC33" face="Times New Roman, Times, serif"><strong><font face="Arial, Helvetica, sans-serif"> ... in 15 minutes per day</font></strong></font></div></div></td></tr>
-<tr align="center"><td height="25" align="right" bgcolor="8D5BC7"><font color="#FFCC33" face="Times New Roman, Times, serif"><strong><font size="+2" face="Arial, Helvetica, sans-serif"><a href=" http://www.selfhelpmagazine.com/goodbye.html?http://SelfHelpMa.AIMCOACH.hop.clickbank.net"><marquee>  ... Create the life of your dreams in 12 weeks or less!... <font color="#FF0000">CLICK HERE NOW!</font></marquee></a></font></strong></font></td></tr></tbody></table>
-         
+    <td align="right"><script type="text/javascript"><!--
+google_ad_client = "pub-6300592435318690";
+google_ad_width = 468;
+google_ad_height = 60;
+google_ad_format = "468x60_as";
+google_ad_type = "text";
+google_ad_channel ="";
+google_color_border = "F5A165";
+google_color_bg = "003366";
+google_color_link = "FFFFFF";
+google_color_url = "AECCEB";
+google_color_text = "AECCEB";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>         
 </td>
   </tr>
 </tbody></table>
@@ -181,7 +193,7 @@ function turn_over(ImageName) {
 <p align="center"><span class="copyright"> 
 
 Copyright 1994 - 
-2005
+2006
 selfhelpmagazine.com
 </span> <a href="http://cybertowers.com/pdr/"><br>
           Pioneer Development Resources, Inc.</a><br>
