guidestar.org (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 729,
  "classifier_probability": 0.75,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 17.44,
  "homepage_snapshot_redirected_domain": "guidestar.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060401180336id_/http://www.guidestar.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060401180336id_/http%3A//guidestar.org",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "guidestar.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615010842id_/http%3A//www.guidestar.org/privacy.jsp",
  "policy_title": "GuideStar - Privacy Policy",
  "policy_url": "guidestar.org/privacy.jsp",
  "sha1": "87704c3e4bbbdff16f62113b9220308e1e7e0099",
  "simhash": 11047775443547134220,
  "simhash_updated": false,
  "site_hostname": "guidestar.org",
  "site_url": "http://guidestar.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615010842",
  "word_count": 107,
  "year": 2006
}

--- a/g/gu/gui/guidestar.org.html
+++ b/g/gu/gui/guidestar.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the guidestar.org privacy policy that was archived on 2005-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051211223023id_/http%3A//www.guidestar.org/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the guidestar.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615010842id_/http%3A//www.guidestar.org/privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>GuideStar - Privacy Policy</title>
@@ -12,6 +12,7 @@
 <script src="/js/date.js" type="text/javascript">
 </script>
 <script type="text/javascript">
+<!--
 var theNewsWin = null;
 
 function newsWin(theNewsUrl) {
@@ -24,6 +25,7 @@ function newsWin(theNewsUrl) {
 
 	var theNewsWin = window.open(theNewsUrl,"GuideStarNews","scrollbars=yes,resizable=yes,HEIGHT=400,WIDTH=600,status=yes,toolbar=yes,directories=yes,menubar=yes,location=no");
 }
+-->
 </script>
 <script type="text/javascript">
 
@@ -50,6 +52,8 @@ var NTPT_MAXTAGWAIT = 1.0; // Max delay (secs) on link-tags and submit-tags
 var NTPT_HTTPSIMGSRC = '';
 var NTPT_GLBLEXTRA = '';
 var NTPT_GLBLREFTOP = false;
+var NTPT_PGEXTRA = 'pv=0';
+
 
 /*** END OF USER-CONFIGURABLE VARIABLES ***/
 
@@ -58,6 +62,7 @@ function O0000(O0OO0O,OOO0O0O){return(eval("\x74\x79\x70\x65\x6f\x66\x20"+O0OO0O
 </script>
 
 <script type="text/javascript">
+
 /****************************************************
      Author: Eric King
      Url: http://redrival.com/eak/index.shtml
@@ -65,7 +70,7 @@ function O0000(O0OO0O,OOO0O0O){return(eval("\x74\x79\x70\x65\x6f\x66\x20"+O0OO0O
      Featured on Dynamic Drive script library (http://www.dynamicdrive.com)
 ****************************************************/
 
-<!-- Begin
+<!--// Begin
 function NewWindow(mypage, myname, w, h, scroll) {
 var winl = (screen.width - w) / 2;
 var wint = (screen.height - h) / 2;
@@ -73,7 +78,8 @@ winprops = 'height='+h+',width='+w+',top='+wint+',left='+winl+',scrollbars='+scr
 win = window.open(mypage, myname, winprops)
 if (parseInt(navigator.appVersion) >= 4) { win.window.focus(); }
 }
-//  End -->
+//  End 
+--> 
 </script>
 
 
@@ -121,16 +127,16 @@ if (parseInt(navigator.appVersion) >= 4) { win.window.focus(); }
 
 <form class="search" method="post" action="/pqShowResults.do?type=guidestarIt&amp;partner=guidestar" name="guidestarisForm" onsubmit="return ntptSubmitTag( this, 'pv=1' );">
 <fieldset>
-<label for="searchfield" id="guidestaritlabel">GuideStar It!--
+<label for="searchfield" id="guidestaritlabel">GuideStar It!0--
 </label>
 <input type="text" name="keywords" accesskey="t" tabindex="1" id="searchfield">
-<input type="image" src="/images/search.gif" name="submit" value="submit" id="searchsubmit">
+<input type="image" src="/images/search.gif" name="submit" value="submit" id="searchsubmit" alt="submit search">
 </fieldset>
 </form>
 
 </div>
 
-<p class="forminfo"><span class="forminfo2"><a href="/pqCriteriaEntry.do?type=new&amp;partner=guidestar&amp;source=topnav" title="Find nonprofit organizations in our database.">Advanced Search</a></span> <span style="padding-left:110px;"><a href="/disclaimer.jsp" title="Permitted and prohibited uses of GuideStar">Terms of Use</a></span></p> 
+<p class="forminfo"><span class="forminfo2"><a href="/pqCriteriaEntry.do?type=new&amp;partner=guidestar&amp;source=topnav" title="Find nonprofit organizations in our database.">Advanced Search</a></span> <span style="padding-left:10px;"><a href="/disclaimer.jsp" title="Permitted and prohibited uses of GuideStar">Terms of Use</a></span></p> 
 
 <!-- ************ end guidestarit search section  ************  -->
 
@@ -147,7 +153,7 @@ if (parseInt(navigator.appVersion) >= 4) { win.window.focus(); }
 <li id="products"><a href="https://commerce.guidestar.org/GuideStar/default.aspx?userid=&#10;&#10;" title="Explore our on-line and custom solutions.">products</a></li>
 <li id="support"><a href="/funding/give2gs.jsp" title="As a nonprofit, we rely on your generous support.">support</a></li>
 
-<li id="classifieds"><a href="http://members.guidestar.org/GsEdit/classifiedIndex.do" title="Classifieds">classifieds</a></li>
+<li id="classifieds"><a href="http://members.guidestar.org/GsEdit/classifiedIndex.do" title="Find out how you can help nonprofits.">classifieds</a></li>
 <li id="resources"><a href="/npo/" title="Update your nonprofit organization's report-it's free!">resources</a></li>
 </ul>
 
@@ -212,7 +218,7 @@ if (parseInt(navigator.appVersion) >= 4) { win.window.focus(); }
 <div class="sidebar-box">
 <h3>Support GuideStar Today</h3>
 <ul>
-	<li><a href="https://secure.ga3.org/03/guidestar_2005donations" onclick="NewWindow(this.href,'name','750','500','yes');return false;">Learn more about making a donation to GuideStar.</a></li>
+	<li><a href="https://secure.ga3.org/03/guidestar_2006donations" onclick="NewWindow(this.href,'name','750','500','yes');return false;">Learn more about making a donation to GuideStar.</a></li>
 </ul>
 </div>
 
@@ -239,7 +245,7 @@ if (parseInt(navigator.appVersion) >= 4) { win.window.focus(); }
  | <a href="/news/newsletter/index.jsp" title="Sign up for the GuideStar Newsletter">Newsletter</a> | <a href="/sitemap.jsp" title="Categorical links to information on our site.">Site Map</a> | <a href="mailto:customerservice@guidestar.org" title="E-mail Customer Service.">E-mail Us</a></p>
 
 <p class="copyright">GuideStar is the registered trademark and operating name of Philanthropic Research, Inc., a 501(c)(3) nonprofit organization.
-Copyright © 2005, Philanthropic Research, Inc. All Rights Reserved. <a href="/privacy.jsp" title="We protect your privacy.">Privacy Policy</a> | <a href="/legal.jsp" title="Copyright/trademark information; how to link to GuideStar">Legal Notices</a></p>
+Copyright © 2006, Philanthropic Research, Inc. All Rights Reserved. <a href="/privacy.jsp" title="We protect your privacy.">Privacy Policy</a> | <a href="/legal.jsp" title="Copyright/trademark information; how to link to GuideStar">Legal Notices</a></p>
 </div>
 
 
